2001-04-04  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/balance-sheet.scm: calculate retained profits
	explicitly, display (liabilities + equity) to allow people
	to check balances.

2001-04-03  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-sheet.c: move cursor before showing
	popup menu

	* src/gnome/window-register.c: add a Transaction->Invoice item

	* src/engine/Query.c: add GUID predicate

	* src/gnome/dialog-commodity.c: add namespace picker getter.
	Show "CURRENCY" instead of "ISO4217" when displaying.

	* src/gnome/druid-commodity.c: use namespace picker getter

	* src/gnome/druid-qif-import.c: use namespace picker getter

	* src/scm/report/register.scm: more work

	* src/engine/gnc-commodity.c (reset_printname): take the namespace
	out of the printname

	* src/gnome/dialog-account.c: add opening balance support

	* src/gnc-ui-util.c (gnc_find_or_create_equity_account): new func.
	(gnc_account_create_opening_balance): new func.

	* src/gnome/gnc-dateedit.c: add some error checking

	* src/gnome/gnc-commodity-edit.c: add "changed" signal

	* src/scm/report/register.scm: fix bug

2001-04-03  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/html-table.scm (gnc:html-table-prepend-row!): Fix
	bug.

	* src/scm/report/html-utilities.scm (gnc:build-html-acct-table): Add
	show-col-headers option.

	* src/scm/report/balance-sheet.scm: New file.  Code for a balance
	sheet report.  Numbers should be correct, presentation is
	rudimentary as usual.

	* src/scm/report/account-summary.scm: modify for changed arguments
	to gnc:build-html-acct-table.

	* src/scm/report/pnl.scm: modify for changed arguments to
	gnc:build-html-account-table.
	
2001-04-02  Dave Peticolas  <dave@krondo.com>

	* Makefile.am: add po/README

	* src/gnome/window-main.c: hide developer menu

	* src/gnome/window-register.c: add invoice menu item

	* src/scm/prefs.scm: add user name & address option for invoice