@@ -1,3 +1,8 @@
+2001-04-04  Christian Stimming  <stimming@tuhh.de>
+
+	* src/gnome/gnc-html-guppi.c, src/scm/html-barchart.scm: Added new
+	option for barchart: legend-reversed.
+
 2001-04-04  Robert Graham Merkel  <rgmerk@mira.net>
 
 	* src/scm/report/balance-sheet.scm: calculate retained profits
